- fixed vertical layout: wrong color for current step and hovering of default steps

--- a/src/components/components/wizard-navigation-bar.component.vertical.less
+++ b/src/components/components/wizard-navigation-bar.component.vertical.less
@@ -103,11 +103,11 @@
 
       // default steps shouldn't change when hovered, because they aren't clickable
       li.default a:hover {
-        .state-circle-with-background(@wz-color-default);
+        color: @wz-color-current;
       }
 
       li.current:after {
-        .state-circle-with-background(@wz-color-default);
+        .state-circle-with-background(@wz-color-current);
       }
 
       li.done:after {
@@ -143,11 +143,11 @@
 
       // default steps shouldn't change when hovered, because they aren't clickable
       li.default a:hover {
-        .state-circle-with-background(@wz-color-default);
+        color: @wz-color-current;
       }
 
       li.current:after {
-        .state-circle-with-background(@wz-color-default);
+        .state-circle-with-background(@wz-color-current);
       }
 
       li.done:after {
@@ -183,11 +183,11 @@
 
       // default steps shouldn't change when hovered, because they aren't clickable
       li.default a:hover {
-        .state-circle-with-border(@dot-border-width, @wz-color-default);
+        color: @wz-color-current;
       }
 
       li.current:after {
-        .state-circle-with-border(@dot-border-width, @wz-color-default);
+        .state-circle-with-border(@dot-border-width, @wz-color-current);
       }
 
       li.done:after {
@@ -225,11 +225,11 @@
 
       // default steps shouldn't change when hovered, because they aren't clickable
       li.default a:hover {
-        .state-circle-with-background-and-content(@wz-color-default);
+        color: @wz-color-current;
       }
 
       li.current:after {
-        .state-circle-with-background-and-content(@wz-color-default);
+        .state-circle-with-background-and-content(@wz-color-current);
       }
 
       li.done:after {
@@ -267,11 +267,11 @@
 
       // default steps shouldn't change when hovered, because they aren't clickable
       li.default a:hover {
-        .state-circle-with-border-and-content(@dot-border-width, @wz-color-default);
+        color: @wz-color-current;
       }
 
       li.current:after {
-        .state-circle-with-border-and-content(@dot-border-width, @wz-color-default);
+        .state-circle-with-border-and-content(@dot-border-width, @wz-color-current);
       }
 
       li.done:after {
